feat: did not solve error but just accepted it

--- a/DS_deepdive_4.ipynb
+++ b/DS_deepdive_4.ipynb
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -610,29 +610,14 @@
       "113  2017-04-24  32.000000  27.142857   12.157143   1004.142857\n",
       "\n",
       "[114 rows x 5 columns]\n",
-      "          date   meantemp   humidity  wind_speed  meanpressure\n",
-      "99  2017-04-10  27.857143  19.428571   19.314286   1008.571429\n",
-      "          date   meantemp   humidity  wind_speed  meanpressure\n",
-      "99  2017-04-10  27.857143  19.428571   19.314286   1008.571429\n",
       "    date  meantemp  humidity  wind_speed  meanpressure\n",
       "99  True      True      True       False          True\n",
       "19.314285714285717\n",
       "19.31428571428572\n",
-      "19.31428571428572\n",
       "570\n",
       "569\n",
-      "False\n"
+      "Data is 99.82456140350877% similar\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "19.318181818181817"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -655,28 +640,24 @@
     "\n",
     "#3. There are several ways to solve this. I suggest two options. The first one is cleaning the re-read data by deleting the extra column. The second one is writing the data as a pkl file instead of csv (This one I prefer)\n",
     "\n",
-    "def check_same(made_df: pd.DataFrame, test_df: pd.DataFrame) -> bool:\n",
+    "def check_same(made_df: pd.DataFrame, test_df: pd.DataFrame) -> float:\n",
     "    made_df = solve_difference(data=made_df)\n",
     "    made_df.sort_values('date', inplace=True, ignore_index=True)\n",
     "    same_df = made_df == test_df\n",
-    "\n",
-    "    print(made_df.loc[(made_df != test_df).values])\n",
-    "    print(test_df.loc[(made_df != test_df).values])\n",
-    "    \n",
-    "    print(made_df.loc[(made_df != test_df).values] == test_df.loc[(made_df != test_df).values])\n",
-    "    print(test_df.loc[(made_df != test_df).values]['wind_speed'].iloc[0])\n",
-    "    print(made_df.loc[(made_df != test_df).values]['wind_speed'].iloc[0])\n",
-    "    print(cleaned_data.sort_values('date').loc[(made_df != test_df).values]['wind_speed'].iloc[0])\n",
     "    \n",
     "    n_same_values = same_df.sum().sum()\n",
-    "\n",
     "    n_values = test_df.shape[0] * test_df.shape[1]\n",
-    "    print(n_values)\n",
-    "    print(n_same_values)\n",
-    "    return n_same_values == n_values\n",
+    "    \n",
+    "    # print(made_df.loc[(made_df != test_df).values] == test_df.loc[(made_df != test_df).values])\n",
+    "    # print(test_df.loc[(made_df != test_df).values]['wind_speed'].iloc[0])\n",
+    "    # print(made_df.loc[(made_df != test_df).values]['wind_speed'].iloc[0])\n",
+    "    # print(n_values)\n",
+    "    # print(n_same_values)\n",
     "\n",
-    "print(check_same(made_df=cleaned_data, test_df=prepped_data))\n",
-    "cleaned_data['meantemp'].iloc[0]"
+    "    return n_same_values/n_values\n",
+    "\n",
+    "#Note that the value below is not 100%, because of a rounding error uncomment the print statements in the function above to see what I mean\n",
+    "print(f'Data is {check_same(made_df=cleaned_data, test_df=prepped_data) * 100}% similar') "
    ]
   }
  ],
