feat: deleted solutions from the notebook

--- a/DS_deepdive_4.ipynb
+++ b/DS_deepdive_4.ipynb
@@ -1,39 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
-    "def add_noise_to_data() -> pd.DataFrame:\n",
-    "    raw_data = pd.read_csv('csv_data/DailyDelhiClimate.csv')\n",
-    "\n",
-    "    #wrong data types\n",
-    "    wrong_data_types = pd.DataFrame(['a', 'b', 'c', 'd', 'e'], index=raw_data.columns).T\n",
-    "\n",
-    "    #wrong data values\n",
-    "    wrong_data_values = pd.DataFrame([9999, -999, -1000, 1000, -550], index=raw_data.columns).T\n",
-    "\n",
-    "    #duplicates\n",
-    "    duplicates = raw_data.iloc[:10, :]\n",
-    "\n",
-    "    #missing values\n",
-    "    missing_values = pd.DataFrame([np.nan, np.nan, np.nan, np.nan, np.nan], index=raw_data.columns).T\n",
-    "\n",
-    "    noisy_data = pd.concat([raw_data, wrong_data_types, wrong_data_values, duplicates, missing_values])\n",
-    "    noisy_data.reset_index(inplace=True, drop=True)\n",
-    "    noisy_data = noisy_data.reindex(np.random.permutation(noisy_data.index))\n",
-    "    noisy_data.reset_index(inplace=True, drop=True)\n",
-    "    noisy_data.to_pickle('csv_data/RawDailyDelhiClimate.pkl')\n",
-    "\n",
-    "add_noise_to_data()"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -194,7 +161,7 @@
    ],
    "source": [
     "#Data Ingestion\n",
-    "\n",
+    "import pandas as pd\n",
     "raw_data = pd.read_pickle('csv_data/RawDailyDelhiClimate.pkl')\n",
     "raw_data"
    ]
@@ -360,16 +327,7 @@
     }
    ],
    "source": [
-    "#Write your solutions for exercise 1 here.\n",
-    "\n",
-    "#1. There are missing values, duplicates, wrong data types, and wrong data values\n",
-    "\n",
-    "#2\n",
-    "clean_data = raw_data.dropna().copy(deep=True)\n",
-    "\n",
-    "#3.\n",
-    "clean_data.drop_duplicates(inplace=True)\n",
-    "clean_data"
+    "#Write your solutions for exercise 1 here."
    ]
   },
   {
@@ -534,33 +492,7 @@
     }
    ],
    "source": [
-    "#Write your solutions for exercise 2 here.\n",
-    "\n",
-    "#1. \n",
-    "def clean_data_func_1(raw_df: pd.DataFrame) -> pd.DataFrame:\n",
-    "    cleaned_data = raw_df.dropna().copy(deep=True)\n",
-    "    cleaned_data.drop_duplicates(inplace=True)\n",
-    "    return cleaned_data\n",
-    "\n",
-    "#2. \n",
-    "def clean_data_func_2(raw_df: pd.DataFrame) -> pd.DataFrame:\n",
-    "    cleaned_data = raw_df.dropna().copy(deep=True)\n",
-    "    cleaned_data.drop_duplicates(inplace=True)\n",
-    "\n",
-    "    #clean wrong data types\n",
-    "    wrong_data_types = cleaned_data['meantemp'].apply(lambda x: type(x) != str)         #note that if you want to do it thoroughly you have to do this for every column. But the noise data is created as entire rows, so this works\n",
-    "    cleaned_data = cleaned_data.loc[wrong_data_types]\n",
-    "\n",
-    "    #clean wrong data values\n",
-    "    wrong_data_values = cleaned_data['meantemp'] > 0\n",
-    "    cleaned_data = cleaned_data.loc[wrong_data_values]\n",
-    "\n",
-    "    return cleaned_data\n",
-    "\n",
-    "#3.\n",
-    "clean_data = clean_data_func_2(raw_df=raw_data)\n",
-    "clean_data.to_csv('CleanSjenkieDailyDelhiClimate.csv')\n",
-    "clean_data"
+    "#Write your solutions for exercise 2 here."
    ]
   },
   {
@@ -662,69 +594,7 @@
     }
    ],
    "source": [
-    "#Write your solutions for exercise 3 here.\n",
-    "\n",
-    "#1. When writing dataframes as a csv file and re-reading the same csv file an extra column is introduced called Unnamed:0, this column indicates the column\n",
-    "prepped_data = pd.read_csv('csv_data/DailyDelhiClimate.csv')\n",
-    "cleaned_data = pd.read_csv('CleanSjenkieDailyDelhiClimate.csv')\n",
-    "\n",
-    "print(prepped_data)\n",
-    "print(cleaned_data)\n",
-    "\n",
-    "# #2.\n",
-    "def solve_difference(data: pd.DataFrame) -> bool:\n",
-    "    data = data.sort_values('date', ignore_index=True).copy(deep=True)\n",
-    "    data = data.drop('Unnamed: 0', axis=1)\n",
-    "    return data\n",
-    "\n",
-    "solved_data = solve_difference(data=cleaned_data)\n",
-    "print(solved_data)       # This should return an error\n",
-    "\n",
-    "#3. There are several ways to solve this. I suggest two options. \n",
-    "# The first one is cleaning the re-read data by deleting the extra column. \n",
-    "# The second one is writing the data as a pkl file instead of csv (This one I prefer)\n",
-    "\n",
-    "def check_same(made_df: pd.DataFrame, test_df: pd.DataFrame) -> float:\n",
-    "    made_df = solve_difference(data=made_df)\n",
-    "    made_df.sort_values('date', inplace=True, ignore_index=True)\n",
-    "    same_df = made_df == test_df\n",
-    "    \n",
-    "    n_same_values = same_df.sum().sum()\n",
-    "    n_values = test_df.shape[0] * test_df.shape[1]\n",
-    "    \n",
-    "    # print(made_df.loc[(made_df != test_df).values] == test_df.loc[(made_df != test_df).values])\n",
-    "    # print(test_df.loc[(made_df != test_df).values]['wind_speed'].iloc[0])\n",
-    "    # print(made_df.loc[(made_df != test_df).values]['wind_speed'].iloc[0])\n",
-    "    # print(n_values)\n",
-    "    # print(n_same_values)\n",
-    "\n",
-    "    return n_same_values/n_values\n",
-    "\n",
-    "#Note that the value below is not 100%, because of a rounding error uncomment the print statements in the function above to see what I mean\n",
-    "print(f'Data is {check_same(made_df=cleaned_data, test_df=prepped_data) * 100}% similar') \n",
-    "\n",
-    "\n",
-    "#4. Nice weather function and add this to the data set\n",
-    "def nice_weather(data: pd.DataFrame, nice_temp: float, nice_humidity: float, nice_wind_speed: float, nice_pressure: float) -> pd.DataFrame:\n",
-    "    temp_data = data.copy(deep=True)\n",
-    "    temp_data['nice_weather'] = np.nan\n",
-    "    for i, row in temp_data.iterrows():\n",
-    "        if row['meantemp'] > nice_temp and row['humidity'] > nice_humidity and row['wind_speed'] < nice_wind_speed and row['meanpressure'] < nice_pressure:\n",
-    "            temp_data.loc[i,'nice_weather'] = True\n",
-    "        else:\n",
-    "            temp_data.loc[i,'nice_weather'] = False\n",
-    "    return temp_data\n",
-    "\n",
-    "enriched_data = nice_weather(data=cleaned_data,\n",
-    "                             nice_temp=0,\n",
-    "                             nice_humidity=0,\n",
-    "                             nice_wind_speed=1000,\n",
-    "                             nice_pressure=1010)\n",
-    "print('ENRICHED DATA')\n",
-    "print(enriched_data)\n",
-    "\n",
-    "#5.\n",
-    "enriched_data.to_csv('enriched_data.csv')\n"
+    "#Write your solutions for exercise 3 here."
    ]
   }
  ],
