Final few exercises of deepdive 6

--- a/deepdive6/DS_deepdive_6_exercise.ipynb
+++ b/deepdive6/DS_deepdive_6_exercise.ipynb
@@ -143,21 +143,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28b106eb",
-   "metadata": {},
-   "source": [
-    "### Interpreting Data Description\n",
-    "The results show 8 numbers for each column in your original dataset. The first number, the count, shows how many rows have non-missing values.\n",
-    "\n",
-    "Missing values arise for many reasons. For example, the size of the 2nd bedroom wouldn't be collected when surveying a 1 bedroom house. We'll come back to the topic of missing data.\n",
-    "\n",
-    "The second value is the mean, which is the average. Under that, std is the standard deviation, which measures how numerically spread out the values are.\n",
-    "\n",
-    "To interpret the min, 25%, 50%, 75% and max values, imagine sorting each column from lowest to highest value. The first (smallest) value is the min. If you go a quarter way through the list, you'll find a number that is bigger than 25% of the values and smaller than 75% of the values. That is the 25% value (pronounced \"25th percentile\"). The 50th and 75th percentiles are defined analogously, and the max is the largest number."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "6def2e6d",
    "metadata": {},
    "source": [
@@ -328,6 +313,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "95176e50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df[['Rooms', 'Bathroom', 'Landsize', 'Lattitude', 'Longtitude']]\n",
+    "y = df.Price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e7cccee8",
    "metadata": {},
    "outputs": [],
@@ -398,7 +394,8 @@
     "from sklearn.metrics import mean_absolute_error\n",
     "\n",
     "predicted_home_prices = melbourne_model.predict(X)\n",
-    "mean_absolute_error(y, predicted_home_prices)"
+    "mean_error = mean_absolute_error(y, predicted_home_prices)\n",
+    "print(f\"Mean absolute error = {mean_error}\")"
    ]
   },
   {
@@ -408,6 +405,42 @@
    "source": [
     "### Seems like a lot??\n",
     "How do we know if this \"good\"? We don't now yet! The secret is to try out lots of different things: tweak parameters, add/remove features, and try to get this error as low as possible!"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "f58b8681",
+   "metadata": {},
+   "source": [
+    "### Coefficient of Determination (R^2 Score)\n",
+    "\n",
+    "Another metric we can use to measure the quality of our model is the Coefficient of Determination, or R^2 Score. This metric provides us with a measure of how well the observed outcomes are replicated by the model, based on the proportion of total variation of outcomes explained by the model.\n",
+    "\n",
+    "The R^2 score ranges from 0 to 1, where 1 means the model perfectly predicts the actual values, and 0 means the model does not predict the outcomes any better than a simple average of the target values.\n",
+    "\n",
+    "Let's break it down:\n",
+    "\n",
+    "If R^2 = 1, the regression predictions perfectly fit the data. The closer R^2 is to 1, the better the model fits your data. If R^2 = 0, the model does not explain any of the variability of the response data around its mean. If R^2 < 0, the model is a worse fit to your data than a horizontal line.\n",
+    "\n",
+    "In other words, it can be said as:\n",
+    "\n",
+    "Our model can explain X% of the variance in house prices."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1c02de6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import r2_score\n",
+    "\n",
+    "predicted_home_prices = melbourne_model.predict(X)\n",
+    "score = r2_score(y, predicted_home_prices)\n",
+    "\n",
+    "print(f\"R^2 Score = {score}\")"
    ]
   },
   {
@@ -447,7 +480,11 @@
     "print(melbourne_model.predict(X.head()))\n",
     "\n",
     "predicted_home_prices = melbourne_model.predict(X)\n",
-    "mean_absolute_error(y, predicted_home_prices)"
+    "mean_error = mean_absolute_error(y, predicted_home_prices)\n",
+    "print(f\"Mean absolute error = {mean_error}\")\n",
+    "\n",
+    "score = r2_score(y, predicted_home_prices)\n",
+    "print(f\"R^2 Score = {score}\")"
    ]
   },
   {
@@ -480,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "950b264c",
    "metadata": {},
    "outputs": [],
@@ -493,22 +530,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "2774ac90",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.1 389769.78021057684\n",
-      "0.2 387494.7117013667\n",
-      "0.3 389652.73235001264\n",
-      "0.4 386972.4930477633\n",
-      "0.5 385728.0174702136\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
@@ -519,7 +544,7 @@
     "\n",
     "# we iterate over 5 values (percentages) and print the error per validation size\n",
     "# 0.1 means that 10% of the dataset will be used for validation and 90% for training\n",
-    "for val_size in [0.1, 0.2, 0.3, 0.4, 0.5]:\n",
+    "for val_size in [0.01, 0.05, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 0.95, 0.99]:\n",
     "    train_X, val_X, train_y, val_y = train_test_split(X, y, test_size=val_size, random_state = 0)\n",
     "    # Define model\n",
     "    melbourne_model = DecisionTreeRegressor()\n",
@@ -528,15 +553,16 @@
     "\n",
     "    # get predicted prices on validation data\n",
     "    val_predictions = melbourne_model.predict(val_X)\n",
-    "    print(val_size, mean_absolute_error(val_y, val_predictions))"
+    "    print(val_size, r2_score(val_y, val_predictions))"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "28047dea",
    "metadata": {},
    "source": [
-    "### Do you see how the error increases if we enlarge the validation size? Can you think of why this happens?"
+    "### What happens with the error when the test-train split changes?"
    ]
   },
   {
@@ -575,6 +601,81 @@
     "val_predictions = melbourne_model.predict( ) # fill in the features (X) you want to predict\n",
     "print(val_size, mean_absolute_error( )) # fill in the actual prices and predicted prices to calculate the error"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66d6ab90",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "42c082d2",
+   "metadata": {},
+   "source": [
+    "# Bias and Variance in Machine Learning\n",
+    "\n",
+    "-  Bias: Assumptions made by a model to make a function easier to learn. It is actually the error rate of the training data. When the error rate has a high value, we call it High Bias and when the error rate has a low value, we call it low Bias.\n",
+    "- Variance: The difference between the error rate of training data and testing data is called variance. If the difference is high then it’s called high variance and when the difference in errors is low then it’s called low variance. Usually, we want to make a low variance for generalized our model.\n",
+    "\n",
+    "![Image: Steps of creating a ML Model](images/under_over_fit.png)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "b6f8aabc",
+   "metadata": {},
+   "source": [
+    "### Exercise 3\n",
+    "**Feature Selection and Model Tuning**\n",
+    "\n",
+    "In this exercise, your task is to build a decision tree model to predict housing prices and achieve the best `r2_score` possible. Your focus will be on selecting the most relevant features and tuning your decision tree's complexity using the `max_leaf_nodes` parameter.\n",
+    "\n",
+    "Depending on the chosen feature you might run into an error when your Decision Tree encounters missing values or non-numerical values. \n",
+    "\n",
+    "The goal is to achieve the highest possible `r2_score` and lowest `mean_absolute_error`. \n",
+    "\n",
+    "Be carefull not to **overfit** or **underfit** your model! "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2703436c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.metrics import r2_score\n",
+    "\n",
+    "feature_columns = ['Rooms'] # MODIFY\n",
+    "NUMBER_OF_NODES = 5 # MODIFY\n",
+    "\n",
+    "#load data\n",
+    "X_train_full  = pd.read_csv('data/train_test_split/X_train.csv')\n",
+    "X_test_full  = pd.read_csv('data/train_test_split/X_test.csv')\n",
+    "y_train = pd.read_csv('data/train_test_split/y_train.csv')\n",
+    "y_test = pd.read_csv('data/train_test_split/y_test.csv')\n",
+    "\n",
+    "# Keep only the features selected\n",
+    "X_train = X_train_full[feature_columns].copy()\n",
+    "X_test = X_test_full[feature_columns].copy()\n",
+    "\n",
+    "# Fill/drop missing values\n",
+    "# TODO (depending on features chosen you might not have missing values)\n",
+    "\n",
+    "# Define model\n",
+    "model = DecisionTreeRegressor(max_leaf_nodes=NUMBER_OF_NODES, random_state=1)\n",
+    "\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "predictions = model.predict(X_test)\n",
+    "print(f\"R2 score: {r2_score(y_test, predictions)}\")"
+   ]
   }
  ],
  "metadata": {
@@ -593,7 +694,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
